--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gatsby": "^1.9.223",
     "gatsby-image": "^1.0.41",
     "gatsby-link": "^1.6.38",
+    "gatsby-plugin-google-fonts": "0.0.3",
     "gatsby-plugin-react-helmet": "^2.0.6",
     "gatsby-plugin-sharp": "^1.6.38",
     "gatsby-plugin-typography": "^1.7.17",
