--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
   "name": "my-portfolio",
-  "description": "Leah Sandacz",
+  "description": "Leah Sandacz's portfolio",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Leah Sandacz",
   "dependencies": {
-    "gatsby": "^1.9.223",
+    "gatsby": "^1.9.247",
     "gatsby-image": "^1.0.41",
     "gatsby-link": "^1.6.38",
     "gatsby-plugin-google-fonts": "0.0.3",
-    "gatsby-plugin-react-helmet": "^2.0.6",
-    "gatsby-plugin-sharp": "^1.6.38",
+    "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-plugin-sharp": "^1.6.44",
     "gatsby-plugin-typography": "^1.7.17",
-    "gatsby-source-filesystem": "^1.5.26",
-    "gatsby-transformer-sharp": "^1.6.22",
+    "gatsby-remark-embed-youtube": "0.0.7",
+    "gatsby-remark-images": "^1.5.63",
+    "gatsby-source-filesystem": "^1.5.36",
+    "gatsby-transformer-remark": "^1.7.41",
+    "gatsby-transformer-sharp": "^1.6.24",
     "react-helmet": "^5.2.0",
     "react-ionicons": "^2.1.6"
   },
   "keywords": [
-    "gatsby"
+    "portfolio",
+    "software",
+    "web",
+    "development",
+    "javascript"
   ],
   "license": "MIT",
   "main": "n/a",
